# claude_code_development_enviroment

./: .env.example  .gitignore  CHANGELOG.md  README.md  format_files.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  validate-release.yml
scripts/: install_test_deps.py
src/claude_code_bootstrap/: cli.py  dependencies.py
src/claude_code_bootstrap/rag_sync/: __init__.py  claude_md.py  config.py  hooks.py  installer.py  mcp.py  prompts.py  setup_sync.py
src/claude_code_bootstrap/rag_sync/templates/: claude_md_section.md  rag_usage_guide.md  sync.py
src/claude_rag_sync/: cli.py  installer.py
tests/: conftest.py  test_e2e.py  test_installer.py  test_integration.py  test_placeholder.py  test_sync_engine.py  test_wiring.py
