[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-bootstrap"
version = "0.1.0"
description = "Bootstrap tools for Claude Code projects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tomli >= 1.1.0",
]

[project.scripts]
claude-code-bootstrap = "claude_code_bootstrap.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-dotenv>=0.5",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_code_bootstrap = ["rag_sync/templates/*"]

[tool.pytest.ini_options]
markers = [
    "integration: requires node, npx, and mcptools (mcp) on PATH",
    "e2e: requires claude CLI on PATH and ANTHROPIC_API_KEY set",
]
env_files = [".env"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
